--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile 'com.android.support:support-v13:22.0.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:palette-v7:22.0.0'
-    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.0.0'
     compile 'com.squareup.okhttp:okhttp:1.1.0'
+    compile 'com.android.support:design:22.2.1'
     compile files('libs/volley.jar')
 }
